--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,8 +197,52 @@ h1,h2,h3,h4,h5,h6 {
 
 /* Main Menu Section */
 
+
+
+/** Dropdown menus in main menu sectiion **/
+
+.nav li .dropdown-menu {
+    display: none;
+    position: absolute;
+    left: 0;
+    padding: 0;
+    margin: 0;
+    margin-top: 3px;
+    text-align: left;
+    border-radius: 0px;
+    border: none;
+
+    z-index: 10000000;
+    background: white !important;
+
+}
+
+.nav li .dropdown-menu.active {
+    display: block;
+}
+
+
+.dropdown-menu > li {
+	width: 100% !important;
+	background: transparent;
+}
+
+.dropdown-menu > li.active {
+	background: white !;
+}
+
+
+.nav li .dropdown-menu a {
+   width: 100%;
+   background: transparent;
+   color: #131f33;
+}
+
+
+/** end dropdown menus in Main menu section **/
+
 .main-menu {
-	background-color: #131f33;
+	background-color: #FA6300;
 	/*border: 1px solid #e9e9e9;*/
 }
 .navbar-collapse {
@@ -212,12 +256,12 @@ h1,h2,h3,h4,h5,h6 {
 	outline: 0;
 }
 .nav>li>a:hover, .nav>li>a:focus {
-	background-color: transparent;
-	color: #FA6300;
+	background-color: #FA6300 !important;
+	color: white;
 }
 .navbar-nav>li>a {
 	/*border-right: 1px solid #e9e9e9;*/
-	color: #6f7678;
+	color: #131f33;
 	display: inline-block;
 	font-size: .875em;
 	padding: 25px;
@@ -229,20 +273,9 @@ h1,h2,h3,h4,h5,h6 {
 	-o-transition: all .25s ease;
 	transition: all .25s ease;
 }
-.mu-main-navbar .mu-main-nav .dropdown-menu {
-  background-color: #333;
-  border-radius: 0;
-}
-.mu-main-navbar .mu-main-nav .dropdown-menu li a {
-  padding: 10px 20px;
-}
-.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-  background-color: #fff;
-}
-
 .menu-list .active a {
-	color: white;
-	background: #131f33;
+	color: #131f33;
+	background: white;
 	border-color: #131f33;
 
 
@@ -272,7 +305,7 @@ h1,h2,h3,h4,h5,h6 {
 	top: 19px;
 }
 .header-fixed-top header.sticky {
-	background-color: #ffffff;
+	background-color: #FA6300;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -283,7 +316,7 @@ h1,h2,h3,h4,h5,h6 {
 	-ms-animation-duration: 0.45s;
 	-o-animation-duration: 0.45s;
 	animation-duration: 0.45s;
-	box-shadow: 0 4px 2px -1px #CCCCCC;
+	
 }
 
 /* Main Slider Section */
@@ -311,6 +344,28 @@ h1,h2,h3,h4,h5,h6 {
 	font-family: avenir next; 
 
 
+}
+.carousel-title.with-buttons{
+	font-size: 25px;
+	margin-top: 7%;
+}
+.carousel-title.with-buttons .btn-lg{
+	background: white ;
+	color: #131f33;
+	text-shadow: none;
+}
+
+
+@media screen and (max-width: 780px) {
+   .carousel-title.with-buttons{
+	font-size: 20px;
+	margin-top: 20%;
+	}
+}
+
+.carousel-title.with-buttons .btn-lg:hover{
+	background: #131f33; 
+	color: white;
 }
 .main-slider span {
 	color: #fff;
@@ -425,9 +480,9 @@ h1,h2,h3,h4,h5,h6 {
 	line-height: 1.3;
 }
 .about-items .item-description {
-	color: #869093;
-	font-size: .875em;
-	padding: 20px 0px 12px 0px;
+	color: #5E5E5E;
+	font-size: 1em;
+	padding: 0px 50px 100px 50px;
 }
 .about-items .btn {
 	background-color: #131f33;
@@ -545,6 +600,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 .service-items .item {
 	padding-bottom: 60px;
+	height: 300px;
 }
 .service-items .item-1 {
 	border-bottom:  1px solid #FA6300;
@@ -1184,6 +1240,7 @@ footer a {
 .tweet iframe{
 	width: 100%;
 	position: relative;
+	height: 400px !important;
 
 	
 }
@@ -1237,11 +1294,11 @@ footer a {
 
 /** custom **/
 .slider_first{
-	max-height: 800px;
+	max-height: 600px;
 	margin-left: 20%;
 }
 .slider_second{
-	min-height: 800px !important;
+	min-height: 600px !important;
 	width: auto !important;
 	
 	
@@ -1293,8 +1350,12 @@ footer a {
 	background: #131f33;
 	box-shadow: 0px 0px 2px 1px #CCCCCC;
 	border-radius: 6px;
+	height: 800px;
 	
 	
+}
+.ref-area iframe{
+	height: 550px !important;
 }
 .ref-desc{
 	text-align: center;
@@ -1320,3 +1381,110 @@ footer a {
 	border-top: none;
 	background: none;
 }
+
+
+
+/** new page styles **/
+
+.new-page-title {
+	/*border-top: 2px solid #FA6300;*/
+	color: white;
+	font-size: 2.65em;
+	font-weight: 400;
+	padding-top: 15px;
+	/*text-transform: uppercase;*/
+	text-align: center !important;
+	margin-top: 100px;
+	/*font-family: cursive;*/
+	
+}
+
+
+/** FAQ **/
+
+#faq-content{	
+	margin-bottom: 50px;	
+}
+
+#faq-content h4{
+	color: green;
+}
+
+.faq-writing{
+	margin-top: 40px;
+	padding: 50px;
+	border-radius: 6px;
+	background: white;	
+}
+.faq-writing h4{
+	color: #FA6300;
+}
+.faq-writing>ul>li{
+	margin-bottom: 40px;
+}
+
+.list-in-content{
+	color: #869093;
+	font-size: 0.9375em;
+	line-height: 25px;
+	list-style-type: lower-roman !important;
+	list-style-position: inside;
+}
+
+
+/** companies **/
+
+#companies h4{
+	color: red;
+}
+
+
+/** gallery **/
+#gallery .new-page-title{
+	color: #131f33;
+	
+}
+.my-gallery {
+  width: 100%;
+  padding: 50px;
+  box-shadow: 0px 0px 2px 2px grey;
+}
+.my-gallery img {
+  width: 100%;
+  height: auto;
+}
+
+
+
+.my-gallery figure {
+  display: inline-block;
+  width: 15%;
+  margin: 0px !important;
+  position: relative;
+ 
+}
+/** make it more visible in a smaller scren **/
+@media screen and (max-width: 780px) {
+    .my-gallery figure  {
+        width: 100%;
+	padding-bottom:20px;
+    }
+}
+
+
+.my-gallery figcaption {
+  display: none;
+}
+
+
+
+/** BLOG **/
+
+.blog.new-page-title{
+	color: #131f33;
+	font-weight: 700;
+}
+
+
+
+
