--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1298,7 +1298,7 @@ footer a {
 	margin-left: 20%;
 }
 .slider_second{
-	min-height: 600px !important;
+	max-height: 600px !important;
 	width: auto !important;
 	
 	
